test/e2e/chainsaw/gateway-ingress/_shared/prober-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prober
spec:
  restartPolicy: Never
  terminationGracePeriodSeconds: 1
  containers:
    - name: prober
      image: busybox:1.36
      command: ["sleep", "3600"]
